# unal-calendar-scrapper

./: .gitignore  README.md  pyproject.toml
unal_calendar_scrapper/: __main__.py
unal_calendar_scrapper/clients/: GoogleCalendar.py  Unal.py  __init__.py  unal.py
unal_calendar_scrapper/entities/: Calendar.py  Event.py  __init__.py
