[tool.poetry]
name = "unal-calendar-scrapper"
version = "0.1.0"
description = ""
authors = ["Gabriel Andres Anzola Tachak <ga.anzola15@gmail.com>"]
readme = "README.md"
packages = [{include = "unal_calendar_scrapper"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.10.0"
dateparser = "^1.1.8"
google-api-python-client = "^2.93.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "unal_calendar_scrapper.__main__:main"
